fix bug where some badges overlap

--- a/style.css
+++ b/style.css
@@ -7,8 +7,13 @@
 	display: flex;
 }
 
+.sc-connection a {
+	display: flex;
+	height: 30px;
+	width: 34px;
+}
+
 .sc-connection .connectedAccountNameInner-2q3MVf {
 	margin-left: -18px;
-	margin-bottom: 2px;
 	align-items: flex-end;
 }
